force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Enable_Create_New_Record__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Enable_Create_New_Record__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Displays the option to create a new record in the lookup drop down.</description>
    <inlineHelpText>Displays the option to create a new record in the lookup drop down.</inlineHelpText>
    <label>Enable Create New Record</label>
    <type>Checkbox</type>
</CustomField>