force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Exclude_Historic_Gift_Appeals__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Exclude_Historic_Gift_Appeals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This excludes any Historic Gift from being displayed in the constituent list</description>
    <inlineHelpText>This excludes any Historic Gift from being displayed in the constituent list</inlineHelpText>
    <label>Exclude Historic Gift Appeals</label>
    <type>Checkbox</type>
</CustomField>