force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Field_Type_Dict__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Field_Type_Dict__c</fullName>
    <description>A map in the form {&quot;field1&quot;:&quot;type1&quot;,&quot;field2&quot;:&quot;type2&quot;...} which relates the fields defined in the Fields To Display, and how they should appear on the table.</description>
    <inlineHelpText>A map in the form {&quot;field1&quot;:&quot;type1&quot;,&quot;field2&quot;:&quot;type2&quot;...} which relates the fields defined in the Fields To Display, and how they should appear on the table.</inlineHelpText>
    <label>Field Type Dict</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>