force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Fields_To_Display__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Fields_To_Display__c</fullName>
    <description>Fields to display on the lookup.</description>
    <inlineHelpText>Fields to display on the lookup.</inlineHelpText>
    <label>Fields To Display</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>