force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Search_By_Fields__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Search_By_Fields__c</fullName>
    <defaultValue>&quot;ALL FIELDS&quot;</defaultValue>
    <description>Fields to search for using SOSL.</description>
    <inlineHelpText>Fields to search for using SOSL.</inlineHelpText>
    <label>Search By Fields</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL FIELDS</fullName>
                <default>true</default>
                <label>ALL FIELDS</label>
            </value>
            <value>
                <fullName>NAME FIELDS</fullName>
            </value>
            <value>
                <fullName>EMAIL FIELDS</fullName>
            </value>
            <value>
                <fullName>PHONE FIELDS</fullName>
            </value>
            <value>
                <fullName>SIDEBAR FIELDS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>