force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Sort_By__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sort_By__c</fullName>
    <description>Used to Sort By Opportunity Object fields for Gift Appeals and Proposals</description>
    <inlineHelpText>Used to Sort By Opportunity Object fields for Gift Appeals and Proposals</inlineHelpText>
    <label>Sort By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>