force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Sort_By_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sort_By_Campaign_Member__c</fullName>
    <description>Campaign field to sort Campaign Members by.</description>
    <inlineHelpText>Field to sort Campaign Members by.</inlineHelpText>
    <label>Sort By Campaign Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>