force-app/main/default/objects/ucinn_ascendv2__Utility_Lookup_Setting__mdt/fields/ucinn_ascendv2__Where_Clause_Fields__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Where_Clause_Fields__c</fullName>
    <description>Fields to query in the where clause. {BLANK} prevents inheriting default setting value.</description>
    <inlineHelpText>Fields to query for in the where clause.</inlineHelpText>
    <label>Where Clause Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>